--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<p>
-    angular
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>Angular</h3>
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
