--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -12,5 +12,6 @@ class="form-control"
 [disabled]="!allowNewServer"
 (click)="onCreateServer()">Add server</button>
 <!--<p>{{ allowNewServer }}</p>-->
-<p> {{ serverCreationStatus }}</p>
-<app-server></app-server>
+<!--<p> {{ serverCreationStatus }}</p>-->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
+<app-server *ngFor="let server of servers"></app-server>
