--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -10,15 +10,20 @@
         href="#" 
         class="list-group-item clearfix" 
         *ngFor="let recipe of recipes">
+        <!--// ngFor is the directive which allows us to repeat code in our template -->
             <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+                <h4 class="list-group-item-heading">{{ recipe.name }} <!-- string interpolation --></h4>
                 <p class="list-group-item-text">{{ recipe.description }}</p>
             </div>
             <span class="pull-right">
-                <img [src]="recipe.imagePath" 
+                <img 
+                [src]="recipe.imagePath"
                 alt="{{ recipe.name }}" 
                 class="img-responsive" 
                 style="max-height: 50px;">
+                <!-- we can use string interpolation to output image path here
+                src="{{recipe.imagePath}}"-->
+                <!--[src]="recipe.imagePath" property binding-->
             </span>
         </a>
         <app-recipe-item></app-recipe-item>
