--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,19 @@
-<p>recipe-item works!</p>
+<a href="#" 
+class="list-group-item clearfix"
+(click)="onSelected()">
+    <!--// ngFor is the directive which allows us to repeat code in our template -->
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">{{ recipe.name }} <!-- string interpolation --></h4>
+        <p class="list-group-item-text">{{ recipe.description }}</p>
+    </div>
+    <span class="pull-right">
+        <img 
+        [src]="recipe.imagePath" 
+        alt="{{ recipe.name }}" 
+        class="img-responsive" 
+        style="max-height: 50px;">
+        <!-- we can use string interpolation to output image path here
+                src="{{recipe.imagePath}}"-->
+        <!--[src]="recipe.imagePath" property binding-->
+    </span>
+</a>
